--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
-        <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
     <title>Document</title>
 </head>
@@ -25,14 +25,84 @@
 </header>
 <!--打开app end-->
 <!--搜索 start-->
-<div class="search-wrap">
+<div class="search_wrap">
     <div class="search_btn"></div>
-    <div class="search"></div>
-    <div class="search_login"></div>
+    <div class="search">
+        <div class="jd_icon"></div>
+        <div class="loupe"></div>
+    </div>
+    <div class="search_login">登录</div>
 </div>
-<div class="test2"></div>
-
 <!--搜索 end-->
+<!--主体内容 start-->
+<div class="main_content">
+    <!--滑动图-->
+    <div class="slide">
+        <img alt="" src="upload/slide.jpeg">
+    </div>
+    <!--品牌日模块-->
+    <div class="brand">
+        <div>
+            <a href="#">
+                <img alt="" src="upload/brand1_01.png">
+            </a>
+        </div>
+        <div>
+            <a href="#">
+                <img alt="" src="upload/brand2_02.png">
+            </a>
+        </div>
+        <div>
+            <a href="#">
+                <img alt="" src="upload/brand3_03.png">
+            </a>
+        </div>
+    </div>
+    <!--导航栏模块-->
+    <nav>
+        <a href="#">
+            <img src="upload/nav_icon1.png" alt="">
+            <span>京东超市</span>
+        </a>
+        <a href="#">
+            <img src="upload/nav_icon2.png" alt="">
+            <span>京东电器</span>
+        </a>
+        <a href="#">
+            <img src="upload/nav_icon3.png" alt="">
+            <span>服饰美妆</span>
+        </a>
+        <a href="#">
+            <img src="upload/nav_icon4.png" alt="">
+            <span>京东生鲜</span>
+        </a>
+        <a href="#">
+            <img src="upload/nav_icon5.png" alt="">
+            <span>京东到家</span>
+        </a>
+        <a href="#">
+            <img src="upload/nav_icon6.png" alt="">
+            <span>充值中心</span>
+        </a>
+        <a href="#">
+            <img src="upload/nav_icon7.png" alt="">
+            <span>附近好店</span>
+        </a>
+        <a href="#">
+            <img src="upload/nav_icon8.png" alt="">
+            <span>PLUS会员</span>
+        </a>
+        <a href="#">
+            <img src="upload/nav_icon9.png" alt="">
+            <span>京东国际</span>
+        </a>
+        <a href="#">
+            <img src="upload/nav_icon10.png" alt="">
+            <span>京东拍卖</span>
+        </a>
+    </nav>
+</div>
+<!--主体内容 end-->
 </body>
 </html>
 
