--- a/index.html
+++ b/index.html
@@ -61,46 +61,58 @@
     <!--导航栏模块-->
     <nav>
         <a href="#">
-            <img src="upload/nav_icon1.png" alt="">
+            <img alt="" src="upload/nav_icon1.png">
             <span>京东超市</span>
         </a>
         <a href="#">
-            <img src="upload/nav_icon2.png" alt="">
+            <img alt="" src="upload/nav_icon2.png">
             <span>京东电器</span>
         </a>
         <a href="#">
-            <img src="upload/nav_icon3.png" alt="">
+            <img alt="" src="upload/nav_icon3.png">
             <span>服饰美妆</span>
         </a>
         <a href="#">
-            <img src="upload/nav_icon4.png" alt="">
+            <img alt="" src="upload/nav_icon4.png">
             <span>京东生鲜</span>
         </a>
         <a href="#">
-            <img src="upload/nav_icon5.png" alt="">
+            <img alt="" src="upload/nav_icon5.png">
             <span>京东到家</span>
         </a>
         <a href="#">
-            <img src="upload/nav_icon6.png" alt="">
+            <img alt="" src="upload/nav_icon6.png">
             <span>充值中心</span>
         </a>
         <a href="#">
-            <img src="upload/nav_icon7.png" alt="">
+            <img alt="" src="upload/nav_icon7.png">
             <span>附近好店</span>
         </a>
         <a href="#">
-            <img src="upload/nav_icon8.png" alt="">
+            <img alt="" src="upload/nav_icon8.png">
             <span>PLUS会员</span>
         </a>
         <a href="#">
-            <img src="upload/nav_icon9.png" alt="">
+            <img alt="" src="upload/nav_icon9.png">
             <span>京东国际</span>
         </a>
         <a href="#">
-            <img src="upload/nav_icon10.png" alt="">
+            <img alt="" src="upload/nav_icon10.png">
             <span>京东拍卖</span>
         </a>
     </nav>
+    <!--新闻模块-->
+    <div class="news">
+        <a href="#">
+            <img alt="" src="upload/news1.jpg">
+        </a>
+        <a href="#">
+            <img alt="" src="upload/news2.jpg">
+        </a>
+        <a href="#">
+            <img alt="" src="upload/news3.jpg">
+        </a>
+    </div>
 </div>
 <!--主体内容 end-->
 </body>
